<resources>
    <string name="app_name">Ovulation Calculator</string>
    <string name="write_your_symptoms_here">Write your symptoms here</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="select_period_date">Select Period Date</string>
    <string name="save">Save</string>
    <string name="empty">Empty</string>
    <string name="blog">Blog</string>
    <string name="recommended">Recommended</string>
    <string name="discover">Discover</string>
    <string name="liked">Liked</string>
    <string name="recent">Recent</string>
    <string name="calendar">Calendar</string>
    <string name="edit_period">Edit Period</string>
    <string name="next_period">Next Period</string>
    <string name="next_ovulation">Next Ovulation</string>
    <string name="chances_of_pregnancy">Chances of Pregnancy</string>
    <string name="log_your_symptoms">Log your symptoms</string>
    <string name="where_does_your_last_period_start">Where does your last period start?</string>
    <string name="back">Back</string>
    <string name="get_started">Get Started</string>
    <string name="how_long_is_your_menstrual_cycle">How long is your menstrual cycle?</string>
    <string name="the_duration_of_period_start_date_usually_21_35_days_days">The duration of period start date, usually 21–35 days.</string>
    <string name="cycle_length">Cycle Length</string>
    <string name="next">Next</string>
    <string name="how_long_is_your_period">How long is your period?</string>
    <string name="bleeding_usually_lasts_between_4_7_days">Bleeding usually lasts between 4–7 days.</string>
    <string name="period_length">Period Length</string>
    <string name="settings">Settings</string>
    <string name="menstrual_cycle">Menstrual Cycle</string>
    <string name="luteal_phase">Luteal Phase</string>
    <string name="recalculate">Recalculate</string>
    <string name="themes">Themes</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_us">Share Us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="are_you_enjoying_our_app_your_opinion_matter_us">Are you enjoying our app? Your opinion matter us.</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="are_you_sure_you_want_to_delete_this_history">Are you sure you want to delete this history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="days_left">Days Left</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="very_low">Very Low</string>
    <string name="anxiety_and_depression">Anxiety and Depression</string>
    <string name="pain_managment">Pain Management</string>
    <string name="boost_intimacy">Boost Intimacy</string>
    <string name="birth_control">Birth Control</string>
    <string name="sex_worries">Sex Worries</string>
    <string name="mental_stress">Mental Stress</string>
    <string name="healthy_eating">Healthy Stress</string>
    <string name="yoga_and_exercise">Yoga and Exercise</string>
    <string name="increase_fertility">Increase Fertility</string>
    <string name="sexual_health">Sexual Health</string>
    <string name="hormonal_health">Hormonal Health</string>
    <string name="menstrual_pain">Menstrual Pain</string>
    <string name="high_bleeding_and_hormonal_imbalance">High Bleeding and Hormonal Imbalance</string>
    <string name="high_bleeding">High Bleeding</string>
    <string name="stress_and_menstrual_cycle">Stress and Menstrual Cycle</string>
    <string name="pain_in_fertility_test">Pain in Fertility Test</string>
    <string name="juice_during_period">Jiuce During Period</string>
    <string name="menstrual_cramps">Menstrual Cramps</string>
    <string name="normal_discharge_time">Normal Discharge Time</string>
    <string name="female_reproductive">Female Reproductive</string>
    <string name="pms_symptoms">PMS Symptoms</string>
    <string name="fertile_days">Fertile days</string>
    <string name="safe_days">Safe days</string>
    <string name="days">days</string>

</resources>