<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/app_primary_color"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/how_long_is_your_menstrual_cycle"
            android:fontFamily="@font/app_font_bold" />

        <TextView
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/the_duration_of_period_start_date_usually_21_35_days_days" />

        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycle_length"
            android:fontFamily="@font/app_font_bold" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/prevBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next"
                android:scaleX="-1"
                app:tint="@color/app_primary_color" />

            <TextView
                android:textSize="@dimen/inp_text_size"
                android:textColor="@color/black"
                android:id="@+id/cycleLengthInp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="28" />

            <ImageView
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next"
                app:tint="@color/app_primary_color" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/intro_1_ind" />

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:id="@+id/nextSessionBtn"
            android:background="@drawable/rounded_btn_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:backgroundTint="@color/app_primary_color"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
</layout>
